<h5>5.00 Beta 1  [2018-03-25]</h5>  Dev: Xoops 2.5.9, PHP 7.2.3
<hr>
- RGB to HEX (mamba)
- changed exit() to die() (mamba)
- assignment in Condition (mamba)
- cosmetics (mamba)
- extracted classes GroupPermForm, GroupFormCheckBox (mamba)
- added  ENT_QUOTES | ENT_HTML5 to htmlspecialchars() (mamba)

WORK IN PROGRESS


<h5>5.00 Alpha (XOOPS 2.5.9)  (NOT RELEASED)</h5>
<hr>
- Remove use of Art framework (geekwright)
- standardize names of classes, tables and constants to include "newbb" (geekwright)
- Use XMF whenever practical (geekwright)
- Simplify database migration strategy (geekwright)
- lots of warning/error cleanup (geekwright)
- extra code updates (mamba)
- Short syntax in array literals (mamba)
- added forumDescription to viewforum.php (aerograf/mamba)
- namespaces, autoload (mamba)


<h5>4.33 RC 13  (XOOPS 2.5.8)      (NOT RELEASED)</h5>
<hr>
- code cosmetics (mamba)
- standardize br tags (mamba)

<h5>4.33 RC 12  (XOOPS 2.5.8)      (2016-04-03)</h5>
<hr>
- removed @version (mamba)
- added auto-creation of /upload folders (aitor/mamba)
- added admin_footer.php (mamba)
- removed code for manual admin tabs (mamba)

<h5>4.33 RC 11  (XOOPS 2.5.8)      (2016-03-14)</h5>
<hr>
- issue 14: SEO images (slider84/montuy337513)
- issue 18: Array to string (cesagonchu/mamba)
- PHP7 and XOOPS 2.5.8 updates (mamba)

<h5>4.33 RC 10                   (2015-11-15)</h5>
<hr>
- moved all images, CSS, and JS files to /assets (mamba)
- renamed .html Smarty templates to .tpl (mamba)
- removed closing php tags (mamba)
- set min. PHP as 5.3.7 and min. XOOPS as 2.5.7 (mamba)
- replaced dirname(__FILE__) with __DIR__ (mamba)
- replaced $i++ with ++$i  (mamba)
- replaced $_POST and $_GET with XoopsRequest (mamba)
- replaced XOOPS_ROOT_PATH  with $GLOBALS['xoops']->path (mamba)
- added/fixed phpDoc headers (mamba)
- fixes by Bleekk
- replaced intval() with (int) (mamba)
- enforcing strict comparison (mamba)
- check for existence of Categories and Forums (cesagonchu/mamba)