@@ -200,6 +200,9 @@ class ReadtopicHandler extends Newbb\ReadHandler
         return true;
     }
 
+    /**
+     * @return bool|void
+     */
     public function synchronization()
     {
         //        return;
